--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@layer base {
+@font-face {
+	font-family: 'Rufina-Regular';
+	src: local('Rufina-Regular'), url(./Assets/font/Rufina/Rufina-Regular.ttf) format('ttf');
+}
+
+@font-face {
+	font-family: 'Rufina-Bold';
+	src: local('Rufina-Bold'), url(./Assets/font/Rufina/Rufina-Bold.ttf) format('ttf');
+}
+
+@font-face {
+	font-family: 'Gilroy-Light';
+	src: local('Gilroy-Light'), url(./Assets/font/Gilroy/Gilroy-Light.otf) format('otf');
+}
+
+@font-face {
+	font-family: 'Gilroy-ExtraBold';
+	src: local('Gilroy-ExtraBold'), url(./Assets/font/Gilroy/Gilroy-ExtraBold.otf) format('otf');
+}
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
+	font-family: 'Rufina-Regular', 'Rufina-Bold', 'Gilroy-Light', 'Gilory-ExtraBold' -apple-system, BlinkMacSystemFont,
+		'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
