--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,9 @@
 		src: local('Gilroy-ExtraBold'), url(./Assets/font/Gilroy/Gilroy-ExtraBold.otf) format('otf');
 	}
 }
+/* *{
+	scroll-behavior: smooth !important;
+} */
 body {
 	margin: 0;
 	padding: 0;
@@ -35,3 +38,13 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
+.testimonail {
+	font-size: 200px;
+}
+@media only screen and (max-width: 1000px) {
+	.testimonail {
+		font-size: 100px;
+		bottom: "10%";
+		top:0px;
+	}
+}
